<resources>
    <string name="app_name">Smart Garage Door</string>
    <string name="default_web_id">419092477295-51teg9721tpl6l0dujhnhhlnbldg0uuj.apps.googleusercontent.com</string>
    <string name="default_notification_id">ms8.smartgaragedoor.GARAGE_DOOR_DEFAULT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="garage_door_is">Garage Door is:</string>
    <string name="garage_open_title">Garage Door Opened</string>
    <string name="garage_door_reopened_message">The garage door was reopened after attempting to close it!</string>
    <string name="garage_closed_title">Garage Door Closed</string>
    <string name="garage_door_closed_message">The garage door was closed after attempting to open it!</string>
    <string name="error">Error</string>
    <string name="error_occurred_message">An error has occurred:</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="channel_name">Garage Door Standard Priority</string>
    <string name="channel_description">Standard priority for garage door notifications.</string>
    <string name="options">Options</string>
    <string name="auto_close">Auto Close</string>
    <string name="warn_before_closing">Warn Before Closing</string>
    <string name="close_after">Close After:</string>
    <string name="send_warning_after">Send Warning After:</string>
    <string name="auto_close_warning_title">Garage Door Left Open</string>
    <string name="auto_close_warning_desc">Your garage door might have been left open. If no action is taken, it will be closed automatically.</string>
    <string name="cancel_auto_close">Prevent Auto Close</string>
    <string name="dismiss">Dismiss</string>
</resources>
